# MotorDev

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  a.txt  agent.md  agent_bak.md  build.bat  build_local.bat  build_release.bat  change_dll.md  codex.md  design_spec.md  firmware_parse_overview.html  flash_pipeline_overview.html  fw_flash_aw_sdk_cpp_walkthrough.html  fw_flash_code_reading_guide.html  fw_flash_implementation_details.html  fw_flashservice_cpp_walkthrough.html  fw_flashservice_h_walkthrough.html  hex_to_flash_walkthrough.html  i2c_passthrough_debug_guide.html  i2c_passthrough_reading_guide.html  inspect_aw86100_dll.ps1  protocol.md  register_read.txt  release_readme.txt  res.txt  setup_qt_env.ps1
.claude/: settings.local.json
.claude/skills/motordev-commit/: SKILL.md
.claude/skills/motordev-review/: SKILL.md
.claude/skills/motordev-tracking/: SKILL.md
TRACKING/: README.md
docs/: file_index.md  tech_overview.md  vision.md
resources/: app_icon.rc  motordev.manifest  motordev_manifest.rc  resources.qrc
resources/styles/: motordev.qss
samples/: README.md  fw_sample_multiseg.hex  generate_samples.py
src/: devicecontext.cpp  devicecontext.h  frameparser.cpp  frameparser.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialmanager.cpp  serialmanager.h
src/models/: channelbuffer.cpp  channelbuffer.h  scopechannelmodel.cpp  scopechannelmodel.h
src/protocol/: batch_register_file.cpp  batch_register_file.h  firmware_parser.cpp  firmware_parser.h  motor_protocol.cpp  motor_protocol.h  register_utils.cpp  register_utils.h  sampling_config.cpp  sampling_config.h
src/services/: appconfigservice.cpp  appconfigservice.h  batchregisterservice.cpp  batchregisterservice.h  blockreadservice.cpp  blockreadservice.h  commanddispatcher.cpp  commanddispatcher.h  configservice.cpp  configservice.h  cyclicwriteservice.cpp  cyclicwriteservice.h  dw9786oisresetservice.cpp  dw9786oisresetservice.h  flashstoreservice.cpp  flashstoreservice.h  flashstrategy.cpp  flashstrategy.h  flashstrategyregistry.cpp  flashstrategyregistry.h  ftdi_latency_helper.cpp  ftdi_latency_helper.h  fwflashservice.cpp  fwflashservice.h  generatorservice.cpp  generatorservice.h  registerservice.cpp  registerservice.h  scoperecordservice.cpp  scoperecordservice.h  scopeservice.cpp  scopeservice.h  simulatorserial.cpp  simulatorserial.h  simulatorservice.cpp  simulatorservice.h
src/services/flashstrategies/: aw86006_strategy.cpp  aw86006_strategy.h  aw86008_strategy.cpp  aw86008_strategy.h  aw86100_strategy.cpp  aw86100_strategy.h  aw_local_isp_strategy.cpp  aw_local_isp_strategy.h  aw_sdk_strategy.cpp  aw_sdk_strategy.h  dw9786_bridge.cpp  dw9786_bridge.h  dw9786_strategy.cpp  dw9786_strategy.h  dw9786_vendor_include.h  dw9788_strategy.cpp  dw9788_strategy.h  hl9788n_bridge.cpp  hl9788n_bridge.h  hl9788n_vendor_include.h
src/tabs/: configtab.cpp  configtab.h  configtab.ui  flashstoragetab.cpp  flashstoragetab.h  fwflashtab.cpp  fwflashtab.h  fwflashtab.ui  oscilloscoptab.cpp  oscilloscoptab.h  oscilloscoptab.ui  registerrwtab.cpp  registerrwtab.h  registerrwtab.ui  serialdebugtab.cpp  serialdebugtab.h  serialdebugtab.ui
src/ui/: repolish.h  scopeviewmode.h  style_constants.h
src/widgets/: aboutdialog.cpp  aboutdialog.h  activitybar.cpp  activitybar.h  activitybar.ui  fwfileinfopanel.cpp  fwfileinfopanel.h  fwflashcontrolpanel.cpp  fwflashcontrolpanel.h  fwflashlogpanel.cpp  fwflashlogpanel.h  logpanel.cpp  logpanel.h  logpanel.ui  registertable.cpp  registertable.h  registertable.ui  scopebottompanel.cpp  scopebottompanel.h  scopebottompanel.ui  scopechannelstrip.cpp  scopechannelstrip.h  scopechannelstrip.ui  scopegeneratorpanel.cpp  scopegeneratorpanel.h  scopegeneratorpanel.ui  scopemarqueelabel.cpp  scopemarqueelabel.h  scopeplotwidget.cpp  scopeplotwidget.h  scopepreviewwidget.cpp  scopepreviewwidget.h  scopepreviewwidget.ui  scoperegisterpanel.cpp  scoperegisterpanel.h  scoperegisterpanel.ui  scopestylepanel.cpp  scopestylepanel.h  scopestylepanel.ui  scopetoolbar.cpp  (+7 more)
tmp_handoff/: README.md  plan_button_feedback_20260402_060000.md  plan_config_logic_20260402_000000.md  plan_console_log_20260402_003000.md  plan_decouple_protocol_20260402_180000.md  plan_group_hover_20260402_070000.md  plan_group_hover_fix_20260402_074000.md  plan_heartbeat_defer_20260402_013000.md  plan_ic_commands_20260402_090000.md  plan_ic_commands_sscom_test_20260402_110000.md  plan_register_rw_feedback_20260402_210000.md  plan_register_rw_logging_20260402_215000.md  plan_register_rwtab_20260402_170000.md  plan_register_rwtab_ui_20260402_190000.md  plan_serial_core_20260401_230000.md  plan_serial_thread_fix_20260402_010000.md  plan_statusbar_logpanel_20260402_150000.md  plan_template.md  plan_topbar_serial_status_20260402_130000.md  plan_ui_refactor_20260331_220000.md  plan_ui_skeleton_20260331_200000.md  plan_ui_tweak_20260402_030000.md  report_button_feedback_20260402_061000.md  report_config_logic_20260402_001000.md  report_console_log_20260402_004500.md  report_decouple_protocol_20260402_162137.md  report_group_hover_and_configfile_20260402_071500.md  report_group_hover_fix_20260402_075000.md  report_heartbeat_defer_20260402_014000.md  report_ic_commands_20260402_091500.md  report_ic_commands_sscom_test_20260402_094000.md  report_register_rw_feedback_20260402_222827.md  report_register_rw_logging_20260402_230325.md  report_register_rwtab_20260402_111000.md  report_register_rwtab_20260402_114500.md  report_register_rwtab_20260402_120000.md  report_register_rwtab_20260402_121500.md  report_register_rwtab_20260402_123000.md  report_register_rwtab_20260402_124500.md  report_register_rwtab_ui_20260402_175905.md  (+49 more)
translations/: motordev_en.qm  motordev_en.ts  translations.qrc
